--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <header class='header'>
     </header>
     <main>
-        <h1></h1>
+        <h1>Creative front‑end developer with a graphic design background.</h1>
         <footer class='footer'>
         </footer>
     </main>
